# autonomous-code-governance-swarm-langgraph

./: .env.example  CLAUDE.md  README.md  main.py  pyproject.toml
audit/report_bypeer_received/: audit_report.md
audit/report_onpeer_generated/: audit.md
audit/report_onself_generated/: audit.md  audit_parallel.md
reports/: final_report.md  interim_report.md
src/: graph.py  rules.py  state.py
src/nodes/: detectives.py  judges.py  justice.py
src/tools/: doc_tools.py  repo_tools.py
tests/: test_detectives.py  test_doc_tools.py  test_graph.py  test_judges.py  test_rules.py  test_state.py
